# cmake_library_template

./: CMakeLists.txt
.github/workflows/: build_and_test.yml
include/mylib/: my_lib.hpp  utils.hpp
src/: my_lib.cpp  utils.cpp
test/: CMakeLists.txt  tests.cpp
